# snappy-data-server

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.sh  example_env.sh  localhost-example.sh  pod-compose.sh  pruner_config.toml  pyproject.toml  requirements.txt  start.bash
.github/workflows/: ci.yml
app/: main.py
app/app/: config.py  main.py  models.py
app/app/db/: base.py  base_class.py  schemas.py  session.py
app/app/templates/: login.html
app/scripts/: backend_prestart.py  initial_data.py  prestart  prestart.sh  start  start.sh
test/cm/: configure_fedora34.sh
